<resources>
    <string name="app_name">Book Store (User)</string>
    <string name="enter">Enter</string>
    <string name="user_name">User Name : </string>
    <string name="user_id">User ID : </string>
    <string name="allList">All List</string>
    <string name="myList_sell">My List - Sell</string>
    <string name="myList_buy">My List - Buy</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="id">\nID</string>
    <string name="seller_name">seller name :</string>
    <string name="seller_id">seller ID :</string>
    <string name="seller">Seller :</string>
    <string name="book_name">book name :</string>
    <string name="price">price :</string>
    <string name="buyer_name">buyer name :</string>
    <string name="buyer_id">buyer ID :</string>
    <string name="sold">sold</string>
    <string name="ok"> OK </string>
    <string name="empty"> - </string>
    <string name="success"> Success ! </string>
    <string name="yes"> Yes </string>
    <string name="no"> No </string>

    <string name="toast_delete"> Delete all data : </string>
    <string name="toast_noData"> Something Error !  There\'s not input data ! </string>

    <string name="text_Buy"> Buyer ( = User) : </string>
    <string name="text_Sell"> Seller ( = User ) : </string>
    <string name="text_Sold_False"> Sold = false </string>

    <string name="mes_cantUpdate"> You can\'t change the price !</string>
    <string name="mes_cantBuy"> You can\'t buy this book ! ( Seller = User )</string>
    <string name="mes_wantToBuy"> Do you want to buy this book ? </string>

    <string name="title_newPrice"> Enter new price  : </string>
</resources>
