<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:hint="@string/id"
        android:textAlignment="center" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:stretchColumns="0,1,2,3">

        <TableRow>

            <TextView
                android:id="@+id/seller_name_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/seller_name" />

            <TextView
                android:id="@+id/seller_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/empty" />

            <TextView
                android:id="@+id/seller_id_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/seller_id" />

            <TextView
                android:id="@+id/seller_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/empty" />
        </TableRow>

        <TableRow>


            <TextView
                android:id="@+id/price_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/price" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/empty" />
            <TextView
                android:id="@+id/sold_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sold" />

            <TextView
                android:id="@+id/sold"
                android:layout_width="match_parent"
                android:hint="@string/empty" />
        </TableRow>
    </TableLayout>
</LinearLayout>